refactor and cleancode MACD calculations added Observer pattern when sending signals what to do with CryptoPair